fix background attachment on mobile

--- a/lmisite/main_site/static/main_site/style/style.scss
+++ b/lmisite/main_site/static/main_site/style/style.scss
@@ -182,6 +182,10 @@ img {
       align-items: center;
       padding: $content-padding 0;
       min-height: 355px;
+      
+      @media (hover: none) {
+        background-attachment: scroll;
+      }
 
       > img {
         max-width: 500px;
